--- a/index.html
+++ b/index.html
@@ -81,81 +81,70 @@
                 </h3>
             </div>
             <div>
-                <button class="button button_transparent button_mail">
-                    Email
-                </button>
-                <button class="button button_violet button_adress">
-                    Try
-                </button>
+                <form>
+                    <input class="input" type="email" placeholder="Email">
+                
+                    <button class="button button_violet">
+                        Try
+                    </button>
+                </form>
             </div>
         </div>
     </section>
     <section class="container plan">
-        <div>
-            <h2 class="plans_title">
+        <h2 class="plan_title">
                 Get the right plan for future
-            </h2>
+        </h2>
+        <div class="plan_flex">
+            <div class="item">
+                <p class="item_text">
+                    Starter
+                </p>
+                <h3 class="item_title">
+                    $29<span>/month</span>
+                </h3>
+                <ul>
+                    <li class="item_li"> 1 website </li>
+                    <li class="item_li"> 5 GB Hosting </li>
+                    <li class="item_li"> Limited Support </li>
+                </ul>
+                <button class="button button_item">
+                    Get Started
+                </button>
+            </div>
+            <div class="item">
+                <p class="item_text">
+                    Premium
+                </p>
+                <h3 class="item_title">
+                    $29<span>/month</span>
+                </h3>
+                <ul>
+                    <li class="item_li"> 10 website </li>
+                    <li class="item_li"> 15 GB Hosting </li>
+                    <li class="item_li"> Premium Support </li>
+                </ul>
+                <button class="button button_item">
+                    Get Started
+                </button>
+            </div><div class="item">
+                <p class="item_text">
+                    Enterprise
+                </p>
+                <h3 class="item_title">
+                    $49<span>/month</span>
+                </h3>
+                <ul>
+                    <li class="item_li"> Unlimited website </li>
+                    <li class="item_li"> 50 GB Hosting </li>
+                    <li class="item_li"> Premium Support </li>
+                </ul>
+                <button class="button button_item">
+                    Get Started
+                </button>
+            </div>
         </div>
-        <div>
-            <ul class="plan_flex">
-                <li class="plan_block">
-                    <p class="plan_block_text_type">
-                        Starter
-                    </p>
-                    <div>
-                        <h2 class="plan_block_title">
-                            Free
-                        </h2>
-                    </div>
-                    <p class="plan_block_text">
-                        1 Website <br>
-                        5 GB Hosting <br>
-                        Limited Support
-                    </p>
-                    <button class="button button_transparent plan_block_button">
-                        Get started
-                    </button>
-                </li>
-
-                <li class="plan_block plan_block_orange">
-                    <p class="plan_block_text_type text_white">
-                        Premium
-                    </p>
-                    <div>
-                        <h2 class="plan_block_title text_white">
-                            $29<span class="plan_block_title_small">/month</span>
-                        </h2>
-                    </div>
-                    <p class="plan_block_text text_white">
-                        10 Website <br>
-                        15 GB Hosting <br>
-                        Premium Support
-                    </p>
-                    <button class="button button_brown plan_block_button text_white">
-                        Get started
-                    </button>
-                </li>
-
-                <li class="plan_block">
-                    <p class="plan_block_text_type">
-                        Enterprise
-                    </p>
-                    <div>
-                        <h2 class="plan_block_title">
-                            $49<span class="plan_block_title_small">/month</span>
-                        </h2>
-                    </div>
-                    <p class="plan_block_text">
-                        Unlimited Website <br>
-                        50 GB Hosting <br>
-                        Premium Support
-                    </p>
-                    <button class="button button_transparent plan_block_button">
-                        Get started
-                    </button>
-                </li>
-            </ul>
-        </div>
+  
     </section>
     <footer class="footer">
         <div class="container footer_flex">
