--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body>
     <header class="header" >
@@ -18,7 +20,7 @@
                     <img src="./img/Logo.svg" alt="logo">
                 </a>
             </div>
-            <nav class="nav">
+            <nav>
                 <ol>
                     <li class="nav_li">
                         <a class="nav_link" href="#">
@@ -50,7 +52,7 @@
         </div>
     </header>
     <section class="container about">
-        <div>
+        <div class="col-6">
             <h1 class="about_title">
                 Grow your subscription business
             </h1>
@@ -66,7 +68,7 @@
                 </button>
             </div>
         </div>
-        <div>
+        <div class="col-6">
             <img src="./img/FirstMen.png" alt="FirstMen">
         </div>
     </section>
