--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,24 +51,26 @@
         </div>
     </header>
     <section class="container about">
-        <div>
-            <h1 class="about_title">
-                Grow your subscription business
-            </h1>
-            <p class="about_text">
-                Outcome-centered products that reduce churn, optimize pricing, and grow your subscription business end-to-end. 
-            </p>
+        <div class="about_flex">
             <div>
-                <button class="button button_violet">
-                    Get Started
-                </button>
-                <button class="button button_transparent">
-                    Try
-                </button>
+                <h1 class="about_title">
+                    Grow your subscription business
+                </h1>
+                <p class="about_text">
+                    Outcome-centered products that reduce churn, optimize pricing, and grow your subscription business end-to-end. 
+                </p>
+                <div>
+                    <button class="button button_violet">
+                        Get Started
+                    </button>
+                    <button class="button button_transparent">
+                        Try
+                    </button>
+                </div>
             </div>
-        </div>
-        <div>
-            <img src="./img/FirstMen.png" alt="FirstMen">
+            <div>
+                <img src="./img/FirstMen.png" alt="FirstMen">
+            </div>
         </div>
     </section>
     <section class="container adress">
