--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,36 +14,38 @@
 <body>
     <header class="header" >
         <div class="container header_flex">
-            <div>
+            <div class="center_content">
                 <a href="#">
                     <img src="./img/Logo.svg" alt="logo">
                 </a>
             </div>
-            <nav class="header_nav">
-                <ol>
-                    <li class="nav_li">
-                        <a class="nav_link" href="#">
-                            Home
-                        </a>
-                    </li>
-                    <li class="nav_li">
-                        <a class="nav_link" href="#">
-                            Features
-                        </a>
-                    </li>
-                    <li class="nav_li">
-                        <a class="nav_link" href="#">
-                            Pricing
-                        </a>
-                    </li>
-                    <li class="nav_li">
-                        <a class="nav_link" href="#">
-                            Blog
-                        </a>
-                    </li>
-                </ol>
-            </nav>
-            <div>
+            <div class="center_content">
+                <nav class="header_nav">
+                    <ol >
+                        <li class="nav_li">
+                            <a class="nav_link" href="#">
+                                Home
+                            </a>
+                        </li>
+                        <li class="nav_li">
+                            <a class="nav_link" href="#">
+                                Features
+                            </a>
+                        </li>
+                        <li class="nav_li">
+                            <a class="nav_link" href="#">
+                                Pricing
+                            </a>
+                        </li>
+                        <li class="nav_li">
+                            <a class="nav_link" href="#">
+                                Blog
+                            </a>
+                        </li>
+                    </ol>
+                </nav>
+            </div>
+            <div class="center_content">
                 <button class="button button_orange">
                     Get Started
                 </button>
@@ -52,7 +54,7 @@
     </header>
     <section class="container about">
         <div class="about_flex">
-            <div>
+            <div class="center_content">
                 <h1 class="about_title">
                     Grow your subscription business
                 </h1>
@@ -68,13 +70,13 @@
                     </button>
                 </div>
             </div>
-            <div>
+            <div class="center_content">
                 <img src="./img/FirstMen.png" alt="FirstMen">
             </div>
         </div>
     </section>
     <section class="container adress">
-        <div>
+        <div class="center_content">
             <img src="./img/SecondMen.png" alt="SecondMen">
         </div>
         <div class="adress_mail">
@@ -99,7 +101,7 @@
                 Get the right plan for future
         </h2>
         <div class="plan_flex">
-            <div class="item">
+            <div class="item center_content">
                 <p class="item_text">
                     Starter
                 </p>
@@ -115,7 +117,7 @@
                     Get Started
                 </button>
             </div>
-            <div class="item">
+            <div class="item center_content">
                 <p class="item_text">
                     Premium
                 </p>
@@ -130,7 +132,7 @@
                 <button class="button button_item">
                     Get Started
                 </button>
-            </div><div class="item">
+            </div><div class="item center_content">
                 <p class="item_text">
                     Enterprise
                 </p>
@@ -151,35 +153,37 @@
     </section>
     <footer class="footer">
         <div class="container footer_flex">
-            <div>
+            <div class="center_content">
                 <a href="#">
                     <img src="./img/Logo.svg" alt="logo">
                 </a>
             </div>
-            <nav class="nav">
-                <ul>
-                    <li class="nav_li">
-                        <a class="nav_link" href="#">
-                            Support
-                        </a>
-                    </li>
-                    <li class="nav_li">
-                        <a class="nav_link" href="#">
-                            Premium
-                        </a>
-                    </li>
-                    <li class="nav_li">
-                        <a class="nav_link" href="#">
-                            Pricing
-                        </a>
-                    </li>
-                    <li class="nav_li">
-                        <a class="nav_link" href="#">
-                            Blog
-                        </a>
-                    </li>
-                </ul>
-            </nav>       
+            <div class="center_content">
+                <nav class="nav">
+                    <ul>
+                        <li class="nav_li">
+                            <a class="nav_link" href="#">
+                                Support
+                            </a>
+                        </li>
+                        <li class="nav_li">
+                            <a class="nav_link" href="#">
+                                Premium
+                            </a>
+                        </li>
+                        <li class="nav_li">
+                            <a class="nav_link" href="#">
+                                Pricing
+                            </a>
+                        </li>
+                        <li class="nav_li">
+                            <a class="nav_link" href="#">
+                                Blog
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>       
         </div>
     </footer>
 </body>
